<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/createNewCard"
        android:title="@string/create_new_card"
        android:icon="@drawable/ic_baseline_add_box_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/folders"
        android:title="@string/ChangeFolders"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_folder_open_24"
        />
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_home_24"
        />
</menu>